..F....... [ZBX-7250] made gettext an optional feature for the frontend (Pavels)
A.F....... [ZBX-1357] updated American English, Brazilian Portuguese, French, Italian, Japanese, Russian, Slovak, Turkish and Ukrainian translations; thanks to Zabbix translators (Richlv)
....I..PS. [ZBXNEXT-1257] dropped support for UCD-SNMP (asaveljevs)

Bug fixes:
..F....... [ZBX-7373] improved performance of pages that use latest history values; thanks to Kenneth Palmertree and Maksim Tkachenko (Pavels)
..F....... [ZBX-7447] fixed regex configuration form not being displayed in French and Italian languages (Pavels)
...G...... [ZBX-7444] fixed agent crash on HP-UX when processing proc.num[] item (asaveljevs)
..F....... [ZBX-4063] fixed data selecting for graphs (Eduard)
..F....... [ZBX-7391] fixed items belonging to multiple applications being displayed only under the first one in the latest data page (Pavels)
..F....... [ZBX-7347] fixed custom step duration max size in action configuration (Eduard)
..F....... [ZBX-7336] fixed "Database type" selection in setup step 3, improved SQLite3 check and removed storing setup supported databases in cookies (Ivo)
..F....... [ZBX-7340] fixed incorrect error messages when imported objects reference unexisting objects (Pavels)
A.F....... [ZBX-7445] fixed frontend redundant call of history (Eduard)
..F....... [ZBX-7277] made item selection helper translatable (Ivo)
.......PS. [ZBX-6160] fixed memory leak in configuration syncer process (Sasha)
.......PS. [ZBX-6160] fixed "ORA-01000: maximum open cursors exceeded" error (Sasha)
..F....... [ZBX-7354] fixed resetting linked template list when trying to add template with empty field (Ivo)
.......PS. [ZBX-7360] fixed maximum IPMI sensor ID length; thanks to OpenIPMI author Corey Minyard (Andris, asaveljevs)
........S. [ZBX-7400] fixed possible server crash when processing trigger functions with text or log items with Oracle backend (Sasha)